nginx/Service-nginx.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  name: "nginx"
  labels:
    nirmata.io/service.name: "nginx"
    nirmata.io/application.name: "nginx"
    nirmata.io/component: "nginx"
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  type: "ClusterIP"
  selector:
    nirmata.io/application.name: "nginx"
    nirmata.io/component: "nginx"
  ports:
  - port: 80
    protocol: "TCP"
